2010-09-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php: Added the local module
	deletion in conf file

2010-09-13  Sergio Martin <sergio.martin@artica.es>

	* operation/reporting/custom_reporting.php: Center an
	icon into the reports table

2010-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/setup/os.list.php, godmode/setup/os.builder.php,
	godmode/setup/os.php: changed the source code and added "os.builder.php" and
	"os.list.php" for to change the management page for to be a "tab page".

2010-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_networkmap.php: cleaned source code.
	
	* include/functions_ui.php: in function "print_os_icon" change the
	directory to search os icon because it change for new feature.
	
	* images/os_icons, images/os_icons/*: copied the icons image files into this
	dir for to use in new feature.
	
	* godmode/menu.php: added new item in submenu "Setup" for the management
	the OS.
	
	* godmode/setup/os.php: added the page to management the list OS of agents.
	
	Pending task: #3057663

2010-09-09  Sancho Lerena   <slerena@artica.es>

	* fgraph.php: Graph "Modules per agent" was not working properly
	due a invalid reference to array. Fixed.

2010-09-08  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.list.php: fixed the pagination when the list of
	alerts show into alert tab in agent config page.
	
	Fixes: #3055920
	
	* godmode/alerts/alert_list.php: cleaned source code.

2010-09-08  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/reporting_xml.php: Improved error detection in
	  reports.

2010-09-07  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Fixed typo in data SQL.

2010-09-06  Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/plugin_registration.php: fixed the translation string previous
	to form.
	Fixes: #3053312

2010-09-06  Miguel de Dios  <miguel.dedios@artica.es>
